--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "babel-eslint": "^10.0.1",
         "eslint-plugin-prettier": "^3.0.1",
         "koa": "^2.7.0",
+        "lodash-es": "^4.17.11",
         "next": "^8.0.3",
         "node-sass": "^4.11.0",
         "prettier": "^1.16.4",
